--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<nav>
 		<section class="navbar container d-flex">
 			<div class="navbar-brand">
-				<a href="index.html">Mundanaaaaa</a>
+				<a href="index.html">Mundana</a>
 			</div>
 			<div class="navbar-nav">
 				<ul class="d-flex">
